# text-visual

./: .editorconfig  .gitignore  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
scripts/: nlp-demo.py
src/: App.tsx  apiTypes.ts  main.tsx  routeTree.gen.ts
src/components/: editor.tsx
src/routes/: __root.tsx  editor.tsx  visual.tsx
